# EMUL-8

./: .gitignore  CHIP8.cpp  CHIP8.h  CMakeLists.txt  README.md  main.cpp  resources.rc  thirdPartyLicenses.txt
src/: CHIP8.cpp  CHIP8.h  config.json  main.cpp
src/shaders/: main.frag  main.geom  main.vert
